[package]
name = "lxst"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
codec2.workspace = true
cpal.workspace = true
lxst-core.workspace = true
libloading.workspace = true
ogg.workspace = true
opus.workspace = true
rns-core.workspace = true
rns-crypto.workspace = true
rns-net.workspace = true
rppal = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = []
gpio-rpi = ["dep:rppal"]
